objects/Case/fields/Case_Schedule_Action_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Schedule_Action_Time__c</fullName>
    <label>Case Schedule Action Time</label>
    <type>DateTime</type>
</CustomField>