objects/Case/fields/Most_Recent_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Queue_ID__c</fullName>
    <label>Most Recent Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>